# BricarOBD

./: .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  build.spec  config.py  eslint.config.js  i18n.py  index.html  main.py  package.json  pnpm-lock.yaml  requirements.txt  tailwind.config.ts  vitest.config.ts
.claude/: settings.local.json
.claude/rules/: react-frontend.md  rust-backend.md
.github/workflows/: auto-release.yml  build-release.yml
data/: __init__.py  dtc_descriptions.py  dtc_repair_tips.py
gui/: __init__.py  advanced_frame.py  app.py  connection_frame.py  dashboard_frame.py  database_frame.py  dialogs.py  dtc_frame.py  ecu_info_frame.py  history_frame.py  live_data_frame.py  monitors_frame.py  theme.py
obd_core/: __init__.py  advanced_manager.py  advanced_operations.py  anomaly_detector.py  connection.py  database_reader.py  demo_mode.py  dtc_manager.py  ecu_database.py  ecu_identifier.py  ev_data_parser.py  hybrid_reader.py  obd_reader.py  pid_definitions.py  safety.py  uds_client.py  unified_db.py  vin_decoder.py
scripts/: build_mac.sh  build_windows.bat  check-db.sh  translate_dtc.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: advanced_operations.json  dtc_descriptions.json  dtc_descriptions_fr.json  dtc_repair_tips.json  ecu_database.json  wmi_database.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection.rs  connection_ble.rs  connection_helpers.rs  connection_wifi_vin.rs  dashboard.rs  dashboard_did.rs  dashboard_discovery.rs  database.rs  diagnostic.rs  dtc.rs  dtc_clear.rs  ecu.rs  ecu_scan.rs  mil.rs  mod.rs  mode06_names.rs  settings.rs  vehicle_info.rs  vin_parser.rs
src-tauri/src/db/: database.rs  models.rs
src-tauri/src/models/: mod.rs
src-tauri/src/obd/: advanced_ops.rs  anomaly.rs  connection.rs  demo.rs  dev_log.rs  dtc.rs  ecu_profiles.rs  error.rs  mod.rs  nrc.rs  pid.rs  safety.rs  transport.rs  transport_ble.rs  vin.rs  vin_cache.rs
src-tauri/src/obd/connection/: elm_io.rs  health.rs  init_strategies.rs  mod.rs  pid_discovery.rs  protocol.rs  queries.rs
src/components/: DevConsole.test.tsx  DevConsole.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  Toast.test.tsx  Toast.tsx  UpdateBanner.test.tsx  UpdateBanner.tsx
src/hooks/: useAndroidBridge.ts  useAutoUpdate.test.ts  useAutoUpdate.ts  useConnectionEffects.ts  useToast.test.ts  useToast.ts
src/lib/: csv.test.ts  csv.ts  devlog.test.ts  devlog.ts  i18n.ts  livedata.test.ts  livedata.ts  units.test.ts  units.ts  utils.test.ts  utils.ts
src/pages/: Advanced.tsx  Connection.tsx  DTC.tsx  Dashboard.tsx  ECUInfo.tsx  FreezeFrame.tsx  History.tsx  LiveData.tsx  Mode06.tsx  Monitors.tsx
src/stores/: connection.test.ts  connection.ts  theme.test.ts  theme.ts  vehicle.ts  vehicleDemoData.test.ts  vehicleDemoData.ts  vehicleTypes.ts
src/styles/: globals.css
src/test/: setup.ts
utils/: dev_console.py  logger.py  web_search.py
(+64 files in other folders)
